<resources xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="abc_action_bar_home_description">转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">%1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_capital_off">关闭</string>
    <string name="abc_capital_on">开启</string>
    <string name="abc_search_hint">搜索…</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">通过%s分享</string>
    <string name="abc_toolbar_collapse_description">收起</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="add_contact">添加联系人</string>
    <string name="advanced_options">高级选项</string>
    <string name="airplane_mode">飞行模式</string>
    <string name="alarm">闹钟</string>
    <string name="alarm_close">关闭</string>
    <string name="alarm_open">开启</string>
    <string name="am_title">上午</string>
    <string name="application_menumain_title">工具</string>
    <string name="back">返回</string>
    <string name="battery_number">电池百分比</string>
    <string name="battery_powersaving">一键省电</string>
    <string name="battery_save">一键省电</string>
    <string name="brightness_dark">暗</string>
    <string name="brightness_light">亮</string>
    <string name="browser_title">浏览器</string>
    <string name="calculator_title">计算器</string>
    <string name="calendar_title">日历</string>
    <string name="call_sender">呼叫发件人</string>
    <string name="call_type_incoming">拨入电话</string>
    <string name="call_type_missing">未接电话</string>
    <string name="call_type_outgoing">拨出电话</string>
    <string name="call_type_refused">拒接电话</string>
    <string name="contact_empty_name_hint">(无名字)</string>
    <string name="contact_empty_number_hint">(无号码)</string>
    <string name="contact_import_simcard_completed_3_hint">导入完成，共导入%1$d个，未完成:%2$d个</string>
    <string name="contacts_menumain_title">电话薄</string>
    <string name="count_unread_call">个未接电话</string>
    <string name="count_unread_messages">封未读信息</string>
    <string name="create_new_mms">写信息</string>
    <string name="data_connection">数据连接</string>
    <string name="delete">删除</string>
    <string name="delete_all">全部删除</string>
    <string name="delete_done">删除完成</string>
    <string name="deskclock_title">闹钟</string>
    <string name="display_brightness">亮度</string>
    <string name="exist_set">已设置</string>
    <string name="family_number_set">亲情号码</string>
    <string name="filemanager_title">文件管理</string>
    <string name="flashlight_title">手电筒</string>
    <string name="fm_network">在线收音机</string>
    <string name="fmradio_title">收音机</string>
    <string name="forward">转发</string>
    <string name="friday">周五</string>
    <string name="function_calculator">计算器</string>
    <string name="function_camera">相机</string>
    <string name="function_deskclock">闹钟</string>
    <string name="function_mms">收件箱</string>
    <string name="function_music">音乐</string>
    <string name="gallery_title">相册</string>
    <string name="hour">时</string>
    <string name="import_contacts">导入联系人</string>
    <string name="importingSimContacts">导入联系人</string>
    <string name="input_method">输入法</string>
    <string name="insert_template">插入模板</string>
    <string name="key_down">下键</string>
    <string name="key_left">左键</string>
    <string name="key_right">右键</string>
    <string name="key_up">上键</string>
    <string name="lock_prompt">键盘已上锁</string>
    <string name="lowbattery_title">省电模式无法操作</string>
    <string name="menu">菜单</string>
    <string name="menu_call">呼叫</string>
    <string name="menu_callNumber">拨打 <g id="NUMBER">%s</g></string>
    <string name="menu_copy">复制</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_lookup">查看</string>
    <string name="menu_send_message">发送短信</string>
    <string name="miniter">分</string>
    <string name="mms_drafts_box">草稿箱</string>
    <string name="mms_edit">编辑</string>
    <string name="mms_insert_name">插入姓名</string>
    <string name="mms_insert_number">插入号码</string>
    <string name="mms_main_index_one">1</string>
    <string name="mms_main_index_three">3</string>
    <string name="mms_main_index_two">2</string>
    <string name="mms_menumain_title">短信</string>
    <string name="mms_options_back">返回</string>
    <string name="mms_options_ok">确定</string>
    <string name="mms_recipient">收信人</string>
    <string name="mms_recv_box">收件箱</string>
    <string name="mms_resend">重发</string>
    <string name="mms_save">保存</string>
    <string name="mms_send">发送</string>
    <string name="mms_send_box">发件箱</string>
    <string name="mms_title_name">信息</string>
    <string name="mobile_item_function_key">功能键设置</string>
    <string name="mobile_item_language">语言</string>
    <string name="mobile_item_location">定位服务</string>
    <string name="mobile_item_reset">恢复出厂设置</string>
    <string name="monday">周一</string>
    <string name="month">月</string>
    <string name="multi_media_title">多媒体</string>
    <string name="music_list">列表</string>
    <string name="music_next">下一首</string>
    <string name="music_player">音乐播放器</string>
    <string name="music_pre">上一首</string>
    <string name="nothing">空白</string>
    <string name="null_recipient">无效收件人</string>
    <string name="null_smsbody">短信内容为空</string>
    <string name="number_unknow">陌生号码</string>
    <string name="off">关闭</string>
    <string name="open">打开</string>
    <string name="option">选项</string>
    <string name="option_ok">确定</string>
    <string name="phone_menumain_title">电话</string>
    <string name="phonebook_settings">电话簿设置</string>
    <string name="pm_title">下午</string>
    <string name="reply">回复</string>
    <string name="reset_prompt">还原系统到出厂状态并清空所有手机数据</string>
    <string name="ring">铃声</string>
    <string name="saturday">周六</string>
    <string name="save">保存</string>
    <string name="save_sender">保存发件人</string>
    <string name="search_contact">查找联系人</string>
    <string name="select">选择</string>
    <string name="send_failed">发送失败</string>
    <string name="send_success">发送成功</string>
    <string name="delivered_success">接收成功</string>
    <string name="sent_message">已发信息</string>
    <string name="settings_auto_time">自动对时</string>
    <string name="settings_date">设置日期</string>
    <string name="settings_hours_format">24小时格式</string>
    <string name="settings_item_battery">电池</string>
    <string name="settings_item_date">时间与日期</string>
    <string name="settings_item_display">显示</string>
    <string name="settings_item_mobile">其他设置</string>
    <string name="settings_item_network">网络设置</string>
    <string name="settings_item_sound">声音</string>
    <string name="settings_item_voice">语音设置</string>
    <string name="settings_menumain_title">设置</string>
    <string name="settings_time">设置时间</string>
    <string name="sim_no_contacts_selected">手机卡中没有联系人</string>
    <string name="sleep_time">休眠时间</string>
    <string name="sleep_time_10s">10 秒</string>
    <string name="sleep_time_15s">15 秒</string>
    <string name="sleep_time_1m">1 分钟</string>
    <string name="sleep_time_30m">30 分钟</string>
    <string name="sleep_time_5m">5 分钟</string>
    <string name="sleep_time_5s">5 秒</string>
    <string name="sms_template">短信模板</string>
    <string name="settings_item_sos">SOS</string>
    <string name="sos_help">SOS呼救</string>
    <string name="sos_close">关闭</string>
    <string name="sos_open">打开</string>
    <string name="sos_setting">开关</string>
    <string name="soundrecorder_title">录音机</string>
    <string name="sunday">周日</string>
    <string name="text_add_contact">添加联系人</string>
    <string name="text_befor_call_edit">呼叫前编辑</string>
    <string name="text_call_duration">通话时长</string>
    <string name="text_cancel">取消</string>
    <string name="text_delete">删除</string>
    <string name="text_delete_calllog">删除记录</string>
    <string name="text_empty">空白</string>
    <string name="text_no">否</string>
    <string name="text_ok">是</string>
    <string name="text_remove">移除</string>
    <string name="text_remove_success">移除成功</string>
    <string name="text_save_contact">保存联系人</string>
    <string name="text_select">选择</string>
    <string name="text_unknow_number">未知号码</string>
    <string name="thursday">周四</string>
    <string name="time_foramt_yesterday">昨天</string>
    <string name="title_calllog">通话记录</string>
    <string name="title_contacts">通讯录</string>
    <string name="title_delete_contact">删除联系人</string>
    <string name="title_edit_contact">编辑联系人</string>
    <string name="title_lookup_contact">查看联系人</string>
    <string name="title_name">姓名</string>
    <string name="title_number">电话号码</string>
    <string name="toast_date_title">请输入正确的时间格式</string>
    <string name="toast_delete_fail">删除失败</string>
    <string name="toast_delete_success">删除成功</string>
    <string name="toast_mutemode_title">静音模式已开起</string>
    <string name="toast_name_null">姓名不能为空</string>
    <string name="toast_normalmode_title">静音模式已关闭</string>
    <string name="toast_number_null">号码不能为空</string>
    <string name="toast_save_fail">保存失败</string>
    <string name="toast_save_success">保存成功</string>
    <string name="toast_sos_fail">sos服务未启动</string>
    <string name="toast_sos_nonet">请打开数据连接，启动sos服务</string>
    <string name="toast_sos_succ">SOS已启动</string>
    <string name="today">日</string>
    <string name="tuesday">周二</string>
    <string name="unlock">解锁</string>
    <string name="unlock_error_prompt">请按顺序解锁</string>
    <string name="unlock_prompt">现在按拨号键</string>
    <string name="unread_messages">未读信息</string>
    <string name="view">查看</string>
    <string name="voice_call">来电报号</string>
    <string name="voice_contacts">电话薄报号</string>
    <string name="voice_keys">按键报号</string>
    <string name="voice_time">语音报时</string>
    <string name="volume">音量</string>
    <string name="volume_large">大</string>
    <string name="volume_less">音量小</string>
    <string name="volume_more">音量大</string>
    <string name="volume_small">小</string>
    <string name="wednesday">周三</string>
    <string name="year">年</string>
    <string name="contac_import_simcard_hint">正在导入联系人</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="toast_date_error">设置日期错误</string>
    <string name="toast_date_success">设置日期成功</string>
    <string name="toast_time_error">设置时间错误</string>
    <string name="toast_time_success">设置时间成功</string>
    <string name="confirm_reset">确定想要恢复到出厂设置吗？</string>
    <string name="settings_item_wifi">WLAN</string>
    <string name="settings_item_bt">Bluetooth</string>
    <string name="settings_item_location">Location</string>
    <string name="settings_item_dual_card_management">双卡管理</string>
    <string name="sim_setting">SIM卡设置</string>
    <string name="sim_cellular_data">移动数据网络</string>
    <string name="sim_phonecall">通话</string>
    <string name="sim_sms">短信</string>
</resources>