<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="155dp"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/mobile_item_reset"
            android:textSize="20sp" 
            android:gravity="center_vertical"
            />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/title_tv"
            android:background="#cccccc" />

        <TextView
            android:id="@+id/functionkey_dialog_listview"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@id/line"
            android:text="@string/confirm_reset" 
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@id/functionkey_dialog_listview"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/dialog_button_bg_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textSize="13sp" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_below="@id/functionkey_dialog_listview"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="3dp"
            android:layout_toRightOf="@id/confirm_btn"
            android:background="@drawable/dialog_button_bg_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="13sp" />
    </RelativeLayout>

</LinearLayout>