<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/date_settings_lable_padding"
        android:layout_marginRight="@dimen/date_settings_lable_padding"
        android:layout_marginTop="@dimen/date_settings_lable_marginTop" >

        <TextView
            style="@style/Settings_Date_Lable_Style"
            android:layout_alignParentLeft="true"
            android:text="@string/year" />

        <TextView
            style="@style/Settings_Date_Lable_Style"
            android:layout_centerHorizontal="true"
            android:text="@string/month" />

        <TextView
            style="@style/Settings_Date_Lable_Style"
            android:layout_alignParentRight="true"
            android:text="@string/today" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/date_settings_lable_marginTop"
        android:background="#ffe0e0e0"
        android:orientation="horizontal"
        android:weightSum="3.0" >

        <EditText
            android:id="@+id/setting_date_edit_year"
            style="@style/Settings_Date_Edittext_Style"
            android:maxLength="4" 
            android:inputType="number"/>

        <EditText
            android:id="@+id/setting_date_edit_month"
            style="@style/Settings_Date_Edittext_Style"
            android:maxLength="2" 
            android:inputType="number"/>

        <EditText
            android:id="@+id/setting_date_edit_day"
            style="@style/Settings_Date_Edittext_Style"
            android:maxLength="2"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>